--- a/ngrx-travel/travel/src/app/modules/destinations/components/destinations-list/destinations-list.component.html
+++ b/ngrx-travel/travel/src/app/modules/destinations/components/destinations-list/destinations-list.component.html
@@ -1,4 +1,4 @@
-<div class="list">
+<div class="list fade-in-bottom">
     <app-destination-item *ngFor="let destination of destinations" [destination]="destination">
 
     </app-destination-item>
