--- a/ngrx-travel/travel/src/app/modules/destinations/components/destinations/destinations.component.scss
+++ b/ngrx-travel/travel/src/app/modules/destinations/components/destinations/destinations.component.scss
@@ -1,4 +1,17 @@
-.spinner {
+.spinner-list {
     margin-left: 47%;
     margin-top: 25%;
+}
+
+.spinner-input {
+    margin-left: 47%;
+}
+
+.card {
+    width: 50%;
+    margin-left: 25%;
+}
+
+label {
+    width: 100%;
 }
