--- a/ngrx-travel/travel/src/app/modules/destinations/components/destinations-list/destination-item/destination-item.component.html
+++ b/ngrx-travel/travel/src/app/modules/destinations/components/destinations-list/destination-item/destination-item.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" *ngIf="!loading">
     <div class="card-header">
         <img [src]="destination.flag" [alt]="destination.flag">
     </div>
